c/examples/writing-a-c-compiler-tests/tests/chapter_12/invalid_parse/bad_specifiers.c
int main(void) {
    /* Can't combine signed and unsigned specifiers */
    int i = 0;
    return (signed unsigned) i;
}